# webgpu-ffi-bindings

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  cdefs.lua  ffi-test.lua  generate-cdefs.lua  glfw-surface-test.lua  gpu.lua  main.cpp  test-cdefs.lua  windowsbuild.sh
examples/: 00-glfw-window-setup.lua  01-list-gpu-capabilities.lua  02-logical-device-creation.lua  03-gpu-command-batching.lua  03-submit-encoded-commands.lua  04-draw-solid-color.lua  05-triangle-drawing-pipeline.lua
